--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.5",
     "sass": "^1.57.1",
