--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "build": "npm i"
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
