--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
-    "mongoose": "^6.8.3"
+    "mongoose": "^6.8.3",
+    "nodemon": "^2.0.22"
   }
 }
