--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apollo-upload-client": "^17.0.0",
+    "axios": "^1.4.0",
+    "cloudinary": "^1.36.4",
     "graphql": "^16.6.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
